--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "cs124-lab2",
   "version": "0.1.0",
   "homepage": "http://NoahNevens.github.io/cs124-lab2",
   "dependencies": {
